tg-2175 botón confirmar vacuna se ve siempre

--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -179,8 +179,8 @@
 					"SUBMIT": "Confirmar",
 					"ADMINISTRATION_DATE": "Fecha de vacunación",
 					"save": {
-						"SUCCESS": "La vacuna aplicada se guardó exitosamente",
-						"ERROR": "Error al guardar la vacuna aplicada",
+						"SUCCESS": "Las vacunas aplicadas se guardaron exitosamente",
+						"ERROR": "Error al guardar las vacunas aplicadas",
 						"CHANGE_STATE": "¿Desea aplicar más vacunas?"
 					}
 				}
