tg-2229 mostrar la especialidad en los cards de problemas de historico evoluciones

--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -149,6 +149,7 @@
 					"HISTORICAL_TITLE": "Histórico de evoluciones",
 					"REASONS": "Motivos",
 					"PROCEDURES": "Procedimientos",
+					"SPECIALITY": "Especialidad",
 					"PROFESSIONAL": "Médico",
 					"EVOLUTION_NOTE": "Descripción/Resumen",
 					"CONSULTATION_DATE": "Fecha de consulta"
