tg-2205 Coreccion de ortografía en pop up de cobertura medica

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -42,5 +42,11 @@
 	},
 	"messages": {
 		"NO_DATA": "No hay información para mostrar"
+	},
+	"medical-coverage": {
+		"ACTIVES_HEALTH_INSURANCES": "Obras sociales activas",
+		"ACTIVES_PRIVATE_HEALTH_INSURANCES": "Prepagas activas",
+		"NEW_HEALTH_INSURANCES": "Agregar nueva obra social",
+		"NEW_PRIVATE_HEALTH_INSURANCES": "Agregar nueva prepaga"
 	}
 }
