tg-2325, tg-2326 creado endpoint para modificar coberturas, fix para obtencion individual de pmc

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -46,6 +46,9 @@ patient.invalid=Invalid patient
 patient.filter.null=Empty fields on filter
 patient.update.invalid=Patient update not allowed
 
+####### Patient Medical Coverage #######
+patientmc.not.found=Coverage not found
+
 ####### Person #######
 person.invalid=Invalid person
 
