--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -44,12 +44,15 @@ user.hasrole=El profesional que quiere eliminar tiene un rol asociado.
 ####### Patient #######
 patient.invalid=Paciente desconocido
 patient.update.invalid=Actualización de paciente no permitida
+patient.filter.null=Filtro con campos vacios
+
+
+####### Patient Medical Coverage #######
+patientmc.not.found=No se ha encontrado la cobertura
 
 ####### Person #######
 person.invalid=Persona desconocida
 
-####### Patient #######
-patient.filter.null=Filtro con campos vacios
 
 ####### Institution #######
 institution.invalid=Institución desconocida
