tg-2362 agrega confirmation dialog para cuando quiere abrir nueva consulta desde problema y existe nueva consulta

--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -159,8 +159,14 @@
 					"PROFESSIONAL": "Médico",
 					"PROBLEM": "Problema",
 					"CONSULTATION_DATE": "Fecha de consulta"
+				},
+				"nueva_opened_confirm_dialog": {
+					"TITLE": "Consulta desde problema",
+					"CONTENT": "Ya existe una nueva consulta abierta, de continuar se perderán los datos cargados",
+					"OK_BUTTON": "Continuar",
+					"CANCEL_BUTTON": "Cancelar"
 				}
-			},
+		},
 			"profile": {
 				"BUTTON_HISTORIA_CLINICA": "Historia Clínica",
 				"WARNING_INTERNADO": "El paciente se encuentra internado en otra institución."
