tg-2394 Cambiar nombres en opciones de menú principal de la appweb

--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -1,11 +1,11 @@
 {
 	"ambulatoria": {
 		"home": {
-			"TITLE": "HCE Ambulatoria",
+			"TITLE": "Historia Clínica",
 			"SUBTITLE": "Complete los campos deseados"
 		},
 		"paciente": {
-			"TITLE": "HCE Ambulatoria",
+			"TITLE": "Historia Clínica",
 			"card": {
 				"buttons": {
 					"NUEVA_CONSULTA": "Nueva consulta"
