tg-2248 Modifica diseño de edición y borrado en tipo de atención - agenda

--- a/front-end/webapp/src/assets/i18n/turnos/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/turnos/es-AR.json
@@ -24,7 +24,8 @@
 			"SELECT_DAYS_TYPE": "Días y tipo de consulta",
 			"SELECT_DAYS_TYPE_SUBTITLE": "Seleccione tipos de consulta para cada día",
 			"dialog": {
-				"TITLE": "Nueva atención"
+				"TITLE": "Nueva atención",
+				"EDIT": "Editar atención"
 			},
 			"messages": {
 				"SUCCESS": "La agenda se guardó exitosamente"
