tg-1539 Agregar mensaje al intentar guardar una agenda sin horarios de atención

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -128,6 +128,7 @@ diary.period.invalid.range=start date of diary have to be before end date
 diary.period.invalid.year=The period for the diary must correspond to the same calendar year
 diary.period.invalid.overlap=A similar agenda already exists defined in an overlapping period of time
 diary.attention.invalid.overlap=It is not possible to define overlapping opening hours
+diary.attention.no-opening-hours=At least on opening hour range must be selected
 
 ####### Appointments #######
 appointment.error.validation=Error validation
