tg-2535 [FE] Agrega encabezados de Cards en ordenes

--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -168,7 +168,11 @@
 				}
 			},
 			"ordenes_prescripciones": {
-				"TAB_LABEL": "Ordenes"
+				"TAB_LABEL": "Ordenes",
+				"TITLE": "Ordenes y prescripciones",
+				"MEDICACION": "Medicación",
+				"RECOMENDACIONES":"Recomendaciones generales",
+				"ESTUDIOS":"Estudios"
 			},
 			"profile": {
 				"BUTTON_HISTORIA_CLINICA": "Historia Clínica",
