tg-2547 [FE] Agrega botón para agregar nuevos elementos en Cards de Ordenes

--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -168,8 +168,8 @@
 				}
 			},
 			"ordenes_prescripciones": {
-				"TAB_LABEL": "Ordenes",
-				"TITLE": "Ordenes y prescripciones",
+				"TAB_LABEL": "Órdenes",
+				"TITLE": "Órdenes y prescripciones",
 				"MEDICACION": "Medicación",
 				"RECOMENDACIONES":"Recomendaciones generales",
 				"ESTUDIOS":"Estudios"
