tg-2522 mejoras en los chequeos de campos de sector

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -122,6 +122,10 @@ healthcare-professional.id.error.validation=Only can see own diaries
 problem.dates.not.after= End date cannot be before of start date
 outpatient.appointment.valid=Patient does not have an appointment
 
+####### Sector #######
+sector.parentOfItself= The parent sector must be different from the sector itself
+sector.mandatoryCareType: "The type of care is mandatory for this sector organization"
+
 ####### Diary #######
 diary.period.invalid=Invalid diary period
 diary.period.invalid.range=start date of diary have to be before end date
