--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -127,6 +127,10 @@ healthcare-professional.affected-to-diary-agenda=Esta especialidad y profesional
 problem.dates.not.after= La fecha de fin no puede ser anterior al inicio del problema.
 outpatient.appointment.valid=El paciente no tiene un turno  asociado
 
+####### Sector #######
+sector.parentOfItself= Un sector no puede ser padre de sí mismo
+sector.mandatoryCareType: "El tipo de cuidado es obligatorio para ese tipo de organización de sector"
+
 ####### Diary #######
 diary.error.validation=Error de validación
 diary.invalid.id=No existe una agenda para el id de agenda especificado
@@ -137,7 +141,7 @@ diary.period.invalid.overlap=Ya existe una agenda similar definida en un períod
 diary.attention.invalid.overlap=No es posible definir horarios de atención superpuestos
 diary.attention.no-opening-hours=Debe seleccionar al menos un período para esta agenda.
 diary.appointments.invalid=La agenda seleccionada posee turnos activos fuera de las nuevas franjas horarias
-diary.appointments.invalid.cancelled=La agenda a eliminar posee turnos asociados sin cancelar 
+diary.appointments.invalid.cancelled=La agenda a eliminar posee turnos asociados sin cancelar
 diary.overturns.limitExceeded=Se superó el límite de sobreturnos para el horario de atención
 diary.deleted=La agenda se encuentra eliminada
 
