--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -3,12 +3,13 @@
 		"TITLE": "Historia de salud integrada",
 		"menu": {
 			"AMBULATORIA": "Historia Clínica",
+			"CAMAS": "Gestión de camas",
+			"GUARDIA": "Guardia",
 			"INSTITUCIONES": "Instituciones",
 			"INTERNACION": "Internación",
 			"PACIENTES": "Pacientes",
 			"PERFIL": "Mi cuenta",
-			"TURNOS": "Gestión de turnos",
-			"CAMAS": "Gestión de camas"
+			"TURNOS": "Gestión de turnos"
 		}
 	},
 	"buttons": {
