tg-2536 [BE] Modificar clases para que se adapten a los cambios de tabla snomed

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -62,6 +62,7 @@ clinical.observation.effective.time.future=Measurement datetime have to be befor
 clinical.observation.effective.time.before.entry.date=Measurement datetime have to be after internment entry date
 
 snomed.invalid=Save SnomedCT code failed
+snomed.not.found=SnomedCT code not found
 snomed.id.max.value=Sctid must be 20 characters long
 snomed.pt.max.value=Preferred term must be 255 characters long
 
