--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -65,6 +65,7 @@ clinical.observation.effective.time.before.entry.date=La fecha de medición debe
 
 
 snomed.invalid=Fallo al guardar código SnomedCT
+snomed.not.found=Código Snomed no encontrado
 snomed.id.max.value=Sctid debe contener hasta 20 caracteres
 snomed.pt.max.value=Los términos preferidos deben contener hasta 255 caracteres
 
