--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -181,6 +181,9 @@
 				"ESTUDIOS":"Estudios",
 				"add_prescription_item_dialog": {
 					"MEDICATION": "Medicación",
+					"MEDICATION_TITLE": "Agregar medicación",
+					"STUDY": "Estudio",
+					"STUDY_TITLE": "Agregar estudio",
 					"ASSOCIATED_PROBLEM": "Problema asociado",
 					"INTERVAL": "Intervalo",
 					"INTERVAL_DEFAULT_OPTION": "Diario",
@@ -189,6 +192,16 @@
 					"OBSERVATIONS": "Observaciones",
 					"INTERVAL_HOURS_REQUIRED": "Ingrese cantidad de horas",
 					"ADMINISTRATION_TIME_DAYS_REQUIRED": "Ingrese cantidad de días"
+				},
+				"new_prescription_dialog": {
+					"MEDICATION_TITLE": "Nueva medicación",
+					"ADD_MEDICATION_LABEL": "Agregar medicación",
+					"STUDY_TITLE": "Nueva orden",
+					"ADD_STUDY_LABEL": "Agregar estudio"
+				},
+				"confirm_prescription_dialog": {
+					"MEDICATION_TITLE": "Su medicación fue agregada correctamente",
+					"STUDY_TITLE": "Su orden fue realizada correctamente"
 				}
 			},
 			"profile": {
