tg-2554 mueve ctes de guardia/home a archivo de traducciones

--- a/front-end/webapp/src/assets/i18n/guardia/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/guardia/es-AR.json
@@ -1,10 +1,17 @@
 {
 	"guardia": {
 		"home": {
-			"TITLE": "Guardia de emergencia",
 			"episodes": {
+				"episode": {
+					"patient": {
+						"ID": "ID Paciente",
+						"NO_INFO": "Sin información",
+						"TEMPORAL": "Paciente temporal"
+					}
+				},
 				"TITLE": "Episodios de guardia"
-			}
+			},
+			"TITLE": "Guardia de emergencia"
 		}
 	}
 }
