--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -21,8 +21,14 @@
 				},
 				"errors": {
 					"MOTIVO_OBLIGATORIO": "Motivo de consulta obligatorio",
+					"FRECUENCIA_CARDIACA_MIN": "La frecuencia cardíaca mínima debe ser 0 (/min)",
+					"FRECUENCIA_RESPIRATORIA_MIN": "La frecuencia respiratoria mínima debe ser 0 (/min)",
+					"TEMPERATURA_CORPORAL_MIN": "La temperatura corporal mínima debe ser 0",
+					"SATURACION_OXIGENO_MIN": "La saturación de oxígeno mínima debe ser 0%",
 					"TENSION_DIASTOLICA_OBLIGATORIO": "Tensión arterial diastólica obligatorio",
+					"TENSION_DIASTOLICA_MIN": "Tensión arterial diastólica mínima debe ser 0 mm",
 					"TENSION_SISTOLICA_OBLIGATORIO": "Tensión arterial sistólica obligatorio",
+					"TENSION_SISTOLICA_MIN": "Tensión arterial sistólica mínima debe ser 0 mm",
 					"TALLA_OBLIGATORIO": "Talla obligatorio",
 					"TALLA_MIN": "La talla mínima debe ser 0 cm",
 					"TALLA_MAX": "La talla máxima debe ser 1000 cm",
