tg-2508 add categoria de estudios en la creacion de ordenes

--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -185,6 +185,7 @@
 					"STUDY": "Estudio",
 					"STUDY_TITLE": "Agregar estudio",
 					"ASSOCIATED_PROBLEM": "Problema asociado",
+					"STUDY_CATEGORY": "Categoría del estudio",
 					"INTERVAL": "Intervalo",
 					"INTERVAL_DEFAULT_OPTION": "Diario",
 					"ADMINISTRATION_TIME": "Tiempo de administración",
