--- a/front-end/webapp/src/assets/i18n/guardia/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/guardia/es-AR.json
@@ -12,6 +12,15 @@
 				"TITLE": "Episodios de guardia"
 			},
 			"TITLE": "Guardia de emergencia"
+		},
+		"new-episode": {
+			"TITLE": "Nuevo episodio",
+			"SUB_TITLE": "Complete los datos para continuar",
+			"ADM_TRIAGE": "Triage administrativo"
+		},
+		"triage": {
+			"LEVEL": "Nivel de urgencia",
+			"ROOM": "Consultorio"
 		}
 	}
 }
