tg-2626 [FE] Reubicacion de boton de nuevo episodio

--- a/front-end/webapp/src/assets/i18n/guardia/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/guardia/es-AR.json
@@ -9,7 +9,8 @@
 						"TEMPORAL": "Paciente temporal"
 					}
 				},
-				"TITLE": "Episodios de guardia"
+				"TITLE": "Episodios de guardia",
+				"NEW_EPISODE": "Nuevo Episodio"
 			},
 			"TITLE": "Guardia de emergencia"
 		},
