tg-2633 Correciones de MR en admision administrativa

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -25,7 +25,8 @@
 		"GENERATE": "Generar",
 		"EDIT": "Editar",
 		"NO": "No",
-		"YES": "Si"
+		"YES": "Si",
+		"SKIP":"Omitir"
 	},
 	"forms": {
 		"REQUIRED": "El campo es requerido",
