tg-2646 agrega acciones a episodio del listado de guardia

--- a/front-end/webapp/src/assets/i18n/guardia/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/guardia/es-AR.json
@@ -50,6 +50,11 @@
 		"home": {
 			"episodes": {
 				"episode": {
+					"actions": {
+						"ATENDER": "Atender",
+						"FINALIZAR_AUSENCIA": "Finalizar por ausencia",
+						"NUEVO_TRIAGE": "Nuevo triage"
+					},
 					"patient": {
 						"ID": "ID Paciente",
 						"NO_INFO": "Sin información",
