tg-2654/2657/2658 fixes sobre el popup de agregar prescripcion item y titulo de pestaña ordenes

--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -174,7 +174,7 @@
 				}
 			},
 			"ordenes_prescripciones": {
-				"TAB_LABEL": "Órdenes",
+				"TAB_LABEL": "Órdenes y prescripciones",
 				"TITLE": "Órdenes y prescripciones",
 				"MEDICACION": "Medicación",
 				"RECOMENDACIONES":"Recomendaciones generales",
