--- a/front-end/webapp/src/assets/i18n/guardia/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/guardia/es-AR.json
@@ -53,7 +53,13 @@
 					"actions": {
 						"ATENDER": "Atender",
 						"FINALIZAR_AUSENCIA": "Finalizar por ausencia",
-						"NUEVO_TRIAGE": "Nuevo triage"
+						"NUEVO_TRIAGE": "Nuevo triage",
+						"messages": {
+							"ATENDER_SUCCESS": "Estado de episodio actualizado a en atención exitosamente",
+							"ATENDER_ERROR": "Error al actualizar estado de episodio a en atención",
+							"FINALIZAR_AUSENCIA_SUCCESS": "Episodio finalizado por ausencia exitosamente",
+							"FINALIZAR_AUSENCIA_ERROR": "Error al finalizar por ausencia el episodio"
+						}
 					},
 					"patient": {
 						"ID": "ID Paciente",
