tg-2664 [FE] Agrega boton restablecer  y control de campos requeridos en SearchPatientComponent

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -26,7 +26,8 @@
 		"EDIT": "Editar",
 		"NO": "No",
 		"YES": "Si",
-		"SKIP":"Omitir"
+		"SKIP":"Omitir",
+		"RESET":"Restablecer"
 	},
 	"forms": {
 		"REQUIRED": "El campo es requerido",
