tg-2647 crea dialog para elegir consultorio al atender episodio de guardia

--- a/front-end/webapp/src/assets/i18n/guardia/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/guardia/es-AR.json
@@ -61,6 +61,10 @@
 							"FINALIZAR_AUSENCIA_ERROR": "Error al finalizar por ausencia el episodio"
 						}
 					},
+					"select-consultorio-dialog": {
+						"ATENDER": "Atender",
+						"CONSULTORIO": "Consultorio"
+					},
 					"patient": {
 						"ID": "ID Paciente",
 						"NO_INFO": "Sin información",
