tg-2682 [P2] Corrige medicación sin receta en listado de medicamentos

--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -179,6 +179,7 @@
 				"MEDICACION": "Medicación",
 				"RECOMENDACIONES":"Recomendaciones generales",
 				"ESTUDIOS":"Estudios",
+				"SIN_RECETA":"Sin receta",
 				"add_prescription_item_dialog": {
 					"MEDICATION": "Medicación",
 					"MEDICATION_TITLE": "Agregar medicación",
