tg-2744 [FE] Agrega boton para completar paciente de episodio de guardia

--- a/front-end/webapp/src/assets/i18n/guardia/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/guardia/es-AR.json
@@ -87,6 +87,9 @@
 				"REASONS": "Motivos de consulta",
 				"ENTRANCE": "Ingreso",
 				"POLICE_INTERVENTION": "Intervención policial"
+			},
+			"search_patient": {
+				"CONFIRM": "Confirmar Paciente"
 			}
 		},
 		"NO_INFO":"Sin información"
