tg-1748 polish estilos de listado de medicaciones

--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -217,11 +217,12 @@
 				},
 				"menu_items": {
 					"DOWNLOAD": "Descargar receta",
-					"BACK": "Volver a receta",
+					"BACK": "Volver a recetar",
 					"SUSPEND":"Suspender",
 					"FINALIZE":"Finalizar",
 					"COMPLETE":"Completar",
-					"DELETE":"Eliminar"
+					"DELETE":"Eliminar",
+					"REACTIVATE": "Reactivar"
 				}
 			},
 			"profile": {
