tg-2756 [FE] Corrige estilos en lista de estudios

--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -180,6 +180,10 @@
 				"RECOMENDACIONES":"Recomendaciones generales",
 				"ESTUDIOS":"Estudios",
 				"SIN_RECETA":"Sin receta",
+				"DESDE_HOY":"Desde hoy",
+				"UN_DIA":"Hace 1 día",
+				"APLICACION_DIARIA":"Una aplicación por día",
+				"USO_CRONICO":"Uso crónico",
 				"add_prescription_item_dialog": {
 					"MEDICATION": "Medicación",
 					"MEDICATION_TITLE": "Agregar medicación",
