tg-2708/2709 acciones individuales sobre medicaciones

--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -224,7 +224,7 @@
 				},
 				"menu_items": {
 					"DOWNLOAD": "Descargar receta",
-					"BACK": "Volver a recetar",
+					"RE_PRESCRIBE": "Volver a recetar",
 					"SUSPEND":"Suspender",
 					"FINALIZE":"Finalizar",
 					"COMPLETE":"Completar",
