tg-2759 implementa header de triage details

--- a/front-end/webapp/src/assets/i18n/guardia/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/guardia/es-AR.json
@@ -106,6 +106,14 @@
 				"ENTRANCE": "Ingreso",
 				"POLICE_INTERVENTION": "Intervención policial"
 			},
+			"triage": {
+				"ultimo": {
+					"TITLE": "Último triage",
+					"NIVEL": "Nivel de urgencia",
+					"PROFESIONAL": "Profesional",
+					"UBICACION": "Ubicación"
+				}
+			},
 			"search_patient": {
 				"CONFIRM": "Confirmar Paciente"
 			}
