--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -214,13 +214,23 @@
 					"DOWNLOAD_BUTTON_MEDICATION": "Descargar receta",
 					"DOWNLOAD_BUTTON_STUDY": "Descargar orden"
 				},
+				"suspend_medication_dialog": {
+					"INPUT_OBSERVATIONS": "Observaciones",
+					"INPUT_DAY_QUANTITY": "Cantidad de días",
+					"INPUT_DAY_QUANTITY_HINT": "Número de días para la suspensión de medicación",
+					"INPUT_DAY_QUANTITY_REQUIRED": "Cantidad de días de suspensión obligatorio",
+					"SUSPEND_BUTTON": "Suspender",
+					"SUSPEND_TITLE": "Suspender medicación"
+				},
 				"toast_messages": {
 					"POST_MEDICATION_SUCCESS": "Medicación agregada correctamente",
 					"POST_MEDICATION_ERROR": "Error al agregar medicación",
 					"POST_STUDY_SUCCESS": "Órden creada correctamente",
 					"POST_STUDY_ERROR": "Error al crear órden",
 					"POST_UPDATE_COVERAGE_SUCCESS": "Las coberturas fueron actualizadas correctamente",
-					"POST_UPDATE_COVERAGE_ERROR": "Ocurrió un error al actualizar las coberturas"
+					"POST_UPDATE_COVERAGE_ERROR": "Ocurrió un error al actualizar las coberturas",
+					"MEDICATION_CHANGE_SUCCESS": "La medicación cambio de estado correctamente",
+					"MEDICATION_CHANGE_ERROR": "La medicación no puede cambiarse a este estado"
 				},
 				"menu_items": {
 					"DOWNLOAD": "Descargar receta",
