tg-2796 [FE] Armado de dto de nuevo episodio adulto ginecologico

--- a/front-end/webapp/src/assets/i18n/guardia/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/guardia/es-AR.json
@@ -12,11 +12,11 @@
 			"CRYING_EXCESSIVE": "Llanto sin consuelo",
 			"DIASTOLIC_BLOOD": "Tensión arterial diastólica",
 			"EVALUATION": "Evaluación",
-			"HEART_RATE": "Frecuencia cardíaca",
+			"HEART_RATE": "Frecuencia cardíaca (/min)",
 			"LEVEL": "Nivel de urgencia",
 			"MUSCLE_HYPERTONIA": "Tono muscular",
 			"OXIGEN_SATURATION": "Saturación de oxígeno (%)",
-			"RESPIRATORY_RATE": "Frecuencia respiratoria",
+			"RESPIRATORY_RATE": "Frecuencia respiratoria (/min)",
 			"RESPIRATORY_RETRACTION": "Respiración con tiraje",
 			"ROOM": "Consultorio",
 			"SYSTOLIC_BLOOD": "Tensión arterial sistólica",
