tg-2800 Guardia - conectar endpoints getBodyTemperature, getMuscleHypertonia, getRespiratoryRetraction y getPerfusion

--- a/front-end/webapp/src/assets/i18n/guardia/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/guardia/es-AR.json
@@ -8,6 +8,7 @@
 		"triage": {
 			"APPEARANCE": "Apariencia",
 			"BREATH": "Respiración",
+			"CIRCULATION": "Circulación",
 			"CONFIRM": "Confirmar triage",
 			"CRYING_EXCESSIVE": "Llanto sin consuelo",
 			"DIASTOLIC_BLOOD": "Tensión arterial diastólica",
@@ -15,10 +16,12 @@
 			"HEART_RATE": "Frecuencia cardíaca (/min)",
 			"LEVEL": "Nivel de urgencia",
 			"MUSCLE_HYPERTONIA": "Tono muscular",
-			"OXIGEN_SATURATION": "Saturación de oxígeno (%)",
+			"OXYGEN_SATURATION": "Saturación de oxígeno (%)",
+			"PERFUSION": "Perfusión",
 			"RESPIRATORY_RATE": "Frecuencia respiratoria (/min)",
 			"RESPIRATORY_RETRACTION": "Respiración con tiraje",
 			"ROOM": "Consultorio",
+			"STRIDOR": "Respiración con estridor",
 			"SYSTOLIC_BLOOD": "Tensión arterial sistólica",
 			"VITAL_SIGNS": "Signos vitales",
 			"TEMPERATURE": "Temperatura",
