tg-2747 Creación de nuevo servicio para obtener un episodio de Guardia

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -149,6 +149,9 @@ appointment.new.phoneNumber.invalid= The phone number must contain up to 20 char
 ####### Health Insurance #######
 health-insurance.not.found = Health Insurance does not exists
 
+####### Emergency Care Episode #######
+careepisode.not.found = The episode was not found or does not exist
+
 ####### Date #######
 date-dto.invalid-day = Day doesn't exists in month
 date-dto.not-null = This field can't be null
