--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -164,6 +164,9 @@ appointment.new.phoneNumber.invalid=El número telefónico debe contener hasta 2
 ####### Health Insurance #######
 health-insurance.not.found = La obra social no existe
 
+####### Emergency Care Episode #######
+careepisode.not.found = El episodio de guardia no se encontró o no existe
+
 ####### Date #######
 date-dto.invalid = El día ingresado no existe en el mes
 date-dto.not-null = El campo no puede ser null
