tg-2761 ajusta control de datos nulleables en triage details

--- a/front-end/webapp/src/assets/i18n/guardia/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/guardia/es-AR.json
@@ -113,6 +113,7 @@
 					"PROFESIONAL": "Profesional",
 					"UBICACION": "Ubicación",
 					"APARIENCIA_RESPIRACION_CIRCULACION": "Apariencia, respiración y circulación",
+					"TEMPERATURA": "Temperatura",
 					"LLANTO_SIN_CONSUELO": "Llanto sin consuelo",
 					"TONO_MUSCULAR": "Tono muscular",
 					"RESPIRACION_TIRAJE": "Respiración con tiraje",
