tg-2762 implementa seccion ultimo triage adulto/ginecologico

--- a/front-end/webapp/src/assets/i18n/guardia/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/guardia/es-AR.json
@@ -119,6 +119,7 @@
 					"RESPIRACION_TIRAJE": "Respiración con tiraje",
 					"RESPIRACION_ESTRIDOR": "Respiración con estridor",
 					"PERFUSION": "Perfusión",
+					"SIGNOS_VITALES": "Signos vitales",
 					"EVALUACION": "Evaluación",
 					"SI": "Si",
 					"NO": "No"
